# nifinova

./: .dockerignore  .env.example  .replit  DOCKER_DEPLOYMENT.md  Dockerfile  INTEGRATIONS.md  KITE_MCP_SETUP.md  LAUNCH_INSTRUCTIONS.md  MCP_INTEGRATION.md  README.md  SETUP_GUIDE.md  WINDOWS_SETUP.md  ZERODHA_INTEGRATION.md  app.py  build-docker.sh  claude_desktop_config.json  docker-compose.yml  install_mcp.py  kite_mcp_integration.py  mcp_client_example.py  mcp_server.py  package-lock.json  package-scripts.json  package.json  pyproject.toml  quick-start.cmd  render.yaml  replit.md  requirements.txt  requirements_mcp.txt  run_python_app.py  start-app.cmd  start-windows.bat  start-windows.ps1  start_python.py  start_python_server.py
client/src/: App.tsx  index.css
client/src/components/: ai-signals.tsx  market-overview.tsx  options-chain.tsx  portfolio-summary.tsx  sidebar.tsx  whatsapp-management.tsx
client/src/hooks/: use-auth.ts  use-market-data.ts
client/src/lib/: auth.ts
client/src/pages/: dashboard.tsx  login.tsx
server/: index.ts  routes.ts  storage.ts
server/services/: ai-signals.ts  whatsapp.ts  zerodha.ts
shared/: schema.ts
templates/: base.html  dashboard.html  login.html
